# ChangeLog for app-admin/metalog
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/metalog/ChangeLog,v 1.52 2006/11/22 18:23:21 flameeyes Exp $

  22 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  metalog-0.8_rc1-r2.ebuild:
  Add ~sparc-fbsd keyword.

  14 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/metalog-0.8_rc1-gcc41.patch, metalog-0.8_rc1-r2.ebuild:
  Add patch for Gentoo/FreeBSD compatibility. Bug #147320.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-metalog-0.7-r1, files/digest-metalog-0.8_pre20031130,
  files/digest-metalog-0.8_rc1, files/digest-metalog-0.8_rc1-r1,
  files/digest-metalog-0.8_rc1-r2, Manifest:
  Fixing SHA256 digest for real, pass three...

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-metalog-0.7-r1, files/digest-metalog-0.8_pre20031130,
  files/digest-metalog-0.8_rc1, files/digest-metalog-0.8_rc1-r1,
  files/digest-metalog-0.8_rc1-r2, Manifest:
  Fixing SHA256 digest, pass two.

  29 Apr 2006; Joshua Kinard <kumba@gentoo.org> metalog-0.8_rc1-r2.ebuild:
  Marked stable on mips.

  23 Apr 2006; Thomas Cort <tcort@gentoo.org> metalog-0.8_rc1-r2.ebuild:
  Stable on alpha wrt Bug #130221.

  19 Apr 2006; Jason Wever <weeve@gentoo.org> metalog-0.8_rc1-r2.ebuild:
  Stable on SPARC wrt bug #130221.

  18 Apr 2006; Joshua Jackson <tsunam@gentoo.org> metalog-0.8_rc1-r2.ebuild:
  Stable on x86; bug #130221

  17 Apr 2006; Patrick McLean <chutzpah@gentoo.org>
  metalog-0.8_rc1-r2.ebuild:
  Stable on amd64 (bug 130221).

  17 Apr 2006; Markus Rothe <corsair@gentoo.org> metalog-0.8_rc1-r2.ebuild:
  Stable on ppc64; bug #130221

  17 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  metalog-0.8_rc1-r2.ebuild:
  ppc stable, bug #130221

  02 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  metalog-0.8_rc1-r2.ebuild:
  Add ~x86-fbsd keyword.

*metalog-0.8_rc1-r2 (08 Feb 2006)
