@@ -1,4 +1,4 @@
-# $Header: /var/cvsroot/gentoo-x86/app-admin/metalog/files/metalog.conf,v 1.6 2006/02/08 01:04:02 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/metalog/files/metalog.conf,v 1.7 2006/12/30 04:07:17 vapier Exp $
 #
 # Sample Metalog configuration file 
 
@@ -88,4 +88,4 @@ Everything very important :
 #console logging :
 #
 #  facility = "*"
-#  command = "/usr/sbin/consolelog.sh"
+#  command = "/sbin/consolelog.sh"
