@@ -1,11 +1,10 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/metalog/metalog-0.8_rc1-r2.ebuild,v 1.12 2006/11/22 18:23:21 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/metalog/metalog-0.8_rc1-r2.ebuild,v 1.13 2006/12/30 04:07:17 vapier Exp $
 
 inherit versionator autotools
 
 MY_P="${PN}-$(replace_version_separator 2 '-')"
-S="${WORKDIR}/${MY_P}"
 DESCRIPTION="A highly configurable replacement for syslogd/klogd"
 HOMEPAGE="http://metalog.sourceforge.net/"
 SRC_URI="mirror://sourceforge/${PN}/${MY_P}.tar.gz"
@@ -18,28 +17,30 @@ IUSE=""
 DEPEND=">=dev-libs/libpcre-3.4"
 PROVIDE="virtual/logger"
 
+S=${WORKDIR}/${MY_P}
+
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
 
-	epatch "${FILESDIR}/${P}-gcc41.patch"
+	epatch "${FILESDIR}"/${P}-gcc41.patch
 	eautoreconf
 }
 
 src_install() {
-	make DESTDIR="${D}" install || die "make install failed"
+	emake DESTDIR="${D}" install || die "make install failed"
 
 	dodoc AUTHORS ChangeLog README NEWS TODO
 	newdoc metalog.conf metalog.conf.sample
 
 	insinto /etc
-	doins "${FILESDIR}"/metalog.conf
+	doins "${FILESDIR}"/metalog.conf || die
 
-	newinitd "${FILESDIR}"/metalog.rc7 metalog
+	newinitd "${FILESDIR}"/metalog.initd metalog
 	newconfd "${FILESDIR}"/metalog.confd metalog
 
-	exeinto /usr/sbin
-	doexe "${FILESDIR}"/consolelog.sh
+	exeinto /sbin
+	doexe "${FILESDIR}"/consolelog.sh || die
 }
 
 pkg_preinst() {
