@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/metalog
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/metalog/ChangeLog,v 1.52 2006/11/22 18:23:21 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/metalog/ChangeLog,v 1.53 2006/12/30 04:07:17 vapier Exp $
+
+  30 Dec 2006; Mike Frysinger <vapier@gentoo.org> files/consolelog.sh,
+  files/metalog.conf, metalog-0.8_rc1-r2.ebuild:
+  Move consolelog.sh to /sbin.
 
   22 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
   metalog-0.8_rc1-r2.ebuild:
